--- a/Unsolved/ExamAdmV21/ExamAdmV21/MainPage.xaml
+++ b/Unsolved/ExamAdmV21/ExamAdmV21/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <local:StudentCollection/>
+        <local:StudentCatalog/>
     </Page.DataContext>
 
     <StackPanel>
