--- a/Unsolved/ExamAdmV10/ExamAdmV10/MainPage.xaml
+++ b/Unsolved/ExamAdmV10/ExamAdmV10/MainPage.xaml
@@ -22,21 +22,20 @@
     <StackPanel>
         <StackPanel Orientation="Horizontal">
             <TextBlock Style="{StaticResource TextBlockStyle}"
-                       Text="{Binding ElementName=studentName, Path=Text}"/>
+                       Text="Per"/>
             <TextBlock Style="{StaticResource TextBlockStyle}"
                        Text=" scored "/>
             <TextBlock Style="{StaticResource TextBlockStyle}"
-                       Text="{Binding ElementName=score, Path=Value}"/>
+                       Text="50"/>
             <TextBlock Style="{StaticResource TextBlockStyle}"
                        Text=" in the "/>
             <TextBlock Style="{StaticResource TextBlockStyle}"
-                       Text="{Binding ElementName=subject, Path=Text}"/>
+                       Text="Math"/>
             <TextBlock Style="{StaticResource TextBlockStyle}" 
                        Text=" test"/>
         </StackPanel>
 
-        <Line X1="0" Y1="10" X2="400" Y2="10" Stroke="Black" 
-              StrokeThickness="2" />
+        <Line X1="0" Y1="10" X2="400" Y2="10" Stroke="Black" StrokeThickness="2" />
 
         <Grid>
             <Grid.RowDefinitions>
