--- a/Unsolved/BioDemo/BioDemo/Views/Domain/TicketView.xaml
+++ b/Unsolved/BioDemo/BioDemo/Views/Domain/TicketView.xaml
@@ -1,14 +1,14 @@
 ﻿<Page
-    x:Class="BioDemo.Views.Domain.ShowView"
+    x:Class="BioDemo.Views.Domain.TicketView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:BioDemo.ViewModels.Page"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:page="using:BioDemo.ViewModels.Page"
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <page:ShowPageViewModel/>
+        <local:TicketPageViewModel/>
     </Page.DataContext>
 
     <Page.Resources>
@@ -20,20 +20,14 @@
     </Page.Resources>
 
     <!--The BottomAppBar contains a CommandBar with controls for executing 
-        CRUD (Create, Read, Update, Delete) operations in this specific view,
-        as well as changing the state of the view. -->
+        RD (Read, Delete) operations in this specific view, as well as changing 
+        the state of the view. Note that this view does NOT contain Create or Update -->
     <Page.BottomAppBar>
         <CommandBar Style="{StaticResource CommandBarStyle}">
             <CommandBar.Content>
                 <TextBlock Style="{StaticResource TextBlockCommandContentStyle}"
                            Text="{Binding ViewStateDescription}" />
             </CommandBar.Content>
-            <AppBarButton Icon="Add" Label="Create" 
-                          IsEnabled="{Binding ControlStates[CreateControl].Enabled}"
-                          Command="{Binding DataCommand[CreateCommand]}"/>
-            <AppBarButton Icon="Edit" Label="Update" 
-                          IsEnabled="{Binding ControlStates[UpdateControl].Enabled}"
-                          Command="{Binding DataCommand[UpdateCommand]}"/>
             <AppBarButton Icon="Delete" Label="Delete" 
                           IsEnabled="{Binding ControlStates[DeleteControl].Enabled}"
                           Command="{Binding DataCommand[DeleteCommand]}"/>
@@ -41,9 +35,7 @@
             <AppBarButton Icon="Setting" Label="View State">
                 <AppBarButton.Flyout>
                     <MenuFlyout Placement="Bottom">
-                        <MenuFlyoutItem Text="Create" Command="{Binding StateCommand[CreateStateCommand]}"/>
                         <MenuFlyoutItem Text="Read" Command="{Binding StateCommand[ReadStateCommand]}"/>
-                        <MenuFlyoutItem Text="Update" Command="{Binding StateCommand[UpdateStateCommand]}"/>
                         <MenuFlyoutItem Text="Delete" Command="{Binding StateCommand[DeleteStateCommand]}"/>
                     </MenuFlyout>
                 </AppBarButton.Flyout>
@@ -77,49 +69,32 @@
 
             <StackPanel Style="{StaticResource StackPanelDetailsItemStyle}">
                 <TextBlock Style="{StaticResource TextBlockDetailsHeaderStyle}" 
-                           Text="Movie" />
-                <ComboBox Style="{StaticResource ComboBoxItemSelectStyle}"
-                          ItemsSource="{Binding ItemDetails.Movies}"
-                          SelectedItem="{Binding ItemDetails.SelectedMovie, Mode=TwoWay}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Style="{StaticResource StackPanelItemTemplateStyle}">
-                                <TextBlock Style="{StaticResource TextBlockItemHeaderStyle}" Text="{Binding HeaderText}" />
-                                <TextBlock Style="{StaticResource TextBlockItemContentStyle}" Text="{Binding ContentText}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+                           Text="Movie " />
+                <TextBox Style="{StaticResource TextBoxDetailsStyle}" IsEnabled="False"
+                         Text="{Binding ItemDetails.Title}" />
             </StackPanel>
 
             <StackPanel Style="{StaticResource StackPanelDetailsItemStyle}">
                 <TextBlock Style="{StaticResource TextBlockDetailsHeaderStyle}" 
-                           Text="Theater" />
-                <ComboBox Style="{StaticResource ComboBoxItemSelectStyle}"
-                          ItemsSource="{Binding ItemDetails.Theaters}"
-                          SelectedItem="{Binding ItemDetails.SelectedTheater, Mode=TwoWay}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Style="{StaticResource StackPanelItemTemplateStyle}">
-                                <TextBlock Style="{StaticResource TextBlockItemHeaderStyle}" Text="{Binding HeaderText}" />
-                                <TextBlock Style="{StaticResource TextBlockItemContentStyle}" Text="{Binding ContentText}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-
+                           Text="Theater " />
+                <TextBox Style="{StaticResource TextBoxDetailsStyle}" IsEnabled="False"
+                         Text="{Binding ItemDetails.Theater}" />
             </StackPanel>
 
             <StackPanel Style="{StaticResource StackPanelDetailsItemStyle}">
                 <TextBlock Style="{StaticResource TextBlockDetailsHeaderStyle}" 
-                           Text="Date and Time" />
-                <CalendarDatePicker Style="{StaticResource CalendarDatePickerStyle}"
-                                    Date="{Binding ItemDetails.DateForShow, Mode=TwoWay}"/>
-                <TimePicker Style="{StaticResource TimePickerStyle}"
-                            Time="{Binding ItemDetails.TimeForShow, Mode=TwoWay}"/>
+                           Text="Time " />
+                <TextBox Style="{StaticResource TextBoxDetailsStyle}" IsEnabled="False"
+                         Text="{Binding ItemDetails.ShowTime}" />
+            </StackPanel>
+
+            <StackPanel Style="{StaticResource StackPanelDetailsItemStyle}">
+                <TextBlock Style="{StaticResource TextBlockDetailsHeaderStyle}" 
+                           Text="Seating " />
+                <TextBox Style="{StaticResource TextBoxDetailsStyle}" IsEnabled="False"
+                         Text="{Binding ItemDetails.Seating}" />
             </StackPanel>
 
         </StackPanel>
-
     </Grid>
 </Page>
